# nanobot-redux

./: .coverage  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  core_agent_lines.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  upstream-intake.md
.github/workflows/: tests.yml
docs/: architecture.mmd  performance-analysis.md  redux-changes.md  redux-manifest.md  release-template.md  upstream-intake.md  upstream-log.md
docs/perf/: B1-parallel-tool-execution.md  B2a-cache-platform-identity.md  B2b-cache-system-prompt.md  B3-session-append-only.md  B4-http-client-pooling.md  B5-cache-tool-definitions.md  B6-reuse-memory-store.md  P1-llm-prompt-caching.md  P2-memory-model-selection.md  README.md  S1-lazy-matrix-import.md
nanobot/: __main__.py
squidbot/: __init__.py  __main__.py
tests/: test_agent_context.py  test_agent_memory.py  test_agent_subagent.py  test_bus_queue.py  test_channels_base.py  test_channels_manager.py  test_cli_input.py  test_commands.py  test_config_loader_conversion.py  test_consolidate_offset.py  test_cron_commands.py  test_cron_service.py  test_cron_skill_payload.py  test_cron_tool.py  test_docker.sh  test_email_channel.py  test_filesystem_delete_tool.py  test_generation_params.py  test_heartbeat.py  test_matrix_channel.py  test_mcp_tool.py  test_memory_consolidation_types.py  test_message_tool.py  test_mistral_provider.py  test_on_progress.py  test_onboard_openrouter_defaults.py  test_read_file_tool.py  test_session_manager.py  test_shell_guard.py  test_skill_invocation.py  test_skills_loader.py  test_tool_validation.py  test_transcription_provider.py  test_utils_helpers.py  test_web_search_tool.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
(+103 files in other folders)
